--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src="https://maps.googleapis.com/maps/api/js"></script>
   </head>
   <body>
+      <nav class="navbar navbar-inverse">
+          <h1 class="navbar-brand mb-0">Weather Application</h1>
+        </nav>
     <div class="container"></div>
   </body>
   <script src="/bundle.js"></script>
