--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script src="https://maps.googleapis.com/maps/api/js"></script>
   </head>
   <body>
-      <nav class="navbar navbar-inverse">
-          <h1 class="navbar-brand mb-0">Weather Application</h1>
+      <nav class="navbar" style="background-color:skyblue">
+          <h1 style="text-align:center">Weather Application</h1>
         </nav>
     <div class="container"></div>
   </body>
