updates and making stable

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <nav class="navbar" style="background-color:skyblue">
           <h1 style="text-align:center">Weather Application</h1>
         </nav>
-    <div class="container"></div>
+    <div id="container"></div>
   </body>
   <script src="/bundle.js"></script>
 </html>
